--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_xiangqing_pipeilist.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_xiangqing_pipeilist.xml
@@ -26,159 +26,159 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="选择项目"
+            android:text="已推荐项目状态"
             android:textColor="@color/chunhei"
             android:textSize="20sp"
             />
 
     </RelativeLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@drawable/ic_line"
-        />
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="3dp"-->
+        <!--android:background="@drawable/ic_line"-->
+        <!--/>-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/chunbai"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="9"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxEms="4"
-                android:singleLine="true"
-                android:text="区域"
-                />
-            <Spinner
-                android:id="@+id/spinner区域"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:dropDownVerticalOffset="35dp"
-                android:dropDownWidth="1080px"
-                android:entries="@array/区域"
-                android:spinnerMode="dropdown"
-                />
-        </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:background="@color/chunbai"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="10dp"-->
+        <!--android:weightSum="9"-->
+        <!--&gt;-->
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="2"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:weightSum="5"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="3"-->
+                <!--android:ellipsize="end"-->
+                <!--android:gravity="center"-->
+                <!--android:maxEms="4"-->
+                <!--android:singleLine="true"-->
+                <!--android:text="区域"-->
+                <!--/>-->
+            <!--<Spinner-->
+                <!--android:id="@+id/spinner区域"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="2"-->
+                <!--android:dropDownVerticalOffset="35dp"-->
+                <!--android:dropDownWidth="1080px"-->
+                <!--android:entries="@array/区域"-->
+                <!--android:spinnerMode="dropdown"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxEms="4"
-                android:singleLine="true"
-                android:text="均价"
-                />
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:dropDownVerticalOffset="35dp"
-                android:dropDownWidth="1080px"
-                android:entries="@array/均价"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="2"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:weightSum="5"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="3"-->
+                <!--android:ellipsize="end"-->
+                <!--android:gravity="center"-->
+                <!--android:maxEms="4"-->
+                <!--android:singleLine="true"-->
+                <!--android:text="均价"-->
+                <!--/>-->
+            <!--<Spinner-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="2"-->
+                <!--android:dropDownVerticalOffset="35dp"-->
+                <!--android:dropDownWidth="1080px"-->
+                <!--android:entries="@array/均价"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxEms="4"
-                android:singleLine="true"
-                android:text="类型"
-                />
-            <Spinner
-                android:id="@+id/spinner类型"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:dropDownVerticalOffset="35dp"
-                android:dropDownWidth="1080px"
-                android:entries="@array/类型"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="2"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:weightSum="5"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="3"-->
+                <!--android:ellipsize="end"-->
+                <!--android:gravity="center"-->
+                <!--android:maxEms="4"-->
+                <!--android:singleLine="true"-->
+                <!--android:text="类型"-->
+                <!--/>-->
+            <!--<Spinner-->
+                <!--android:id="@+id/spinner类型"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="2"-->
+                <!--android:dropDownVerticalOffset="35dp"-->
+                <!--android:dropDownWidth="1080px"-->
+                <!--android:entries="@array/类型"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxEms="4"
-                android:singleLine="true"
-                android:text="更多"
-                />
-            <Spinner
-                android:id="@+id/spinner更多"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:dropDownVerticalOffset="35dp"
-                android:dropDownWidth="1080px"
-                android:entries="@array/更多"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="2"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:weightSum="5"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="3"-->
+                <!--android:ellipsize="end"-->
+                <!--android:gravity="center"-->
+                <!--android:maxEms="4"-->
+                <!--android:singleLine="true"-->
+                <!--android:text="更多"-->
+                <!--/>-->
+            <!--<Spinner-->
+                <!--android:id="@+id/spinner更多"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="2"-->
+                <!--android:dropDownVerticalOffset="35dp"-->
+                <!--android:dropDownWidth="1080px"-->
+                <!--android:entries="@array/更多"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            >
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_reverseorder"
-                />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:gravity="center"-->
+            <!--&gt;-->
+            <!--<ImageButton-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:src="@drawable/ic_reverseorder"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
     <android.support.v7.widget.RecyclerView
