--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_show_label.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_show_label.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 <LinearLayout
+    android:layout_marginLeft="20dp"
     android:id="@+id/show_label"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <RelativeLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_need_tags"
@@ -21,8 +21,11 @@
             android:background="@drawable/shape_addlabel"
             android:padding="14dp"
             android:text="五证齐全"
+            android:lines="1"
+            android:singleLine="false"
+            android:maxEms="16"
             android:textColor="#40a9ff"
-            android:textSize="19sp" />
+            android:textSize="10sp" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
