--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_baobeikehu_ss.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_baobeikehu_ss.xml
@@ -6,7 +6,10 @@
     android:padding="10dp"
     >
 
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/work_recyclerview_complain"
@@ -15,6 +18,8 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 </LinearLayout>
