--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_chengjiaokehu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_chengjiaokehu.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="确认中"
+            android:text="待成交"
             android:textColor="@color/chunhei"
             android:textSize="14sp"
             android:background="@android:color/transparent"
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="有效"
+            android:text="成交"
             android:textColor="@color/chunhei"
             android:textSize="14sp"
             android:background="@android:color/transparent"
@@ -64,21 +64,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="无效"
+            android:text="未成交"
             android:textColor="@color/chunhei"
             android:textSize="14sp"
             android:background="@android:color/transparent"
             />
-        <!--<Button-->
-            <!--android:id="@+id/work_button_over_complain"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:text="申诉"-->
-            <!--android:textColor="@color/chunhei"-->
-            <!--android:textSize="14sp"-->
-            <!--android:background="@android:color/transparent"-->
-            <!--/>-->
+        <Button
+            android:id="@+id/work_button_over_complain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="申诉"
+            android:textColor="@color/chunhei"
+            android:textSize="14sp"
+            android:background="@android:color/transparent"
+            />
 
     </LinearLayout>
 
