--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_disable_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_disable_details.xml
@@ -607,7 +607,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone">
+                android:visibility="visible">
 
                     <Button
                         android:id="@+id/button_sure"
