--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_ss.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_ss.xml
@@ -5,7 +5,10 @@
     android:padding="10dp"
     android:orientation="vertical"
     >
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/work_recyclerview_complain"
         android:layout_width="match_parent"
@@ -13,5 +16,7 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
